feautured was worked on

--- a/index.html
+++ b/index.html
@@ -62,16 +62,13 @@
               <!--/*<span><button><img src="./img/icons/search.png" height="21px" alt="enter"></button></span>*/-->
             </div>
           </form>
-        </div>
-        <div>
-          carousel
         </div>  
       </div>    
     </div>
 
   </section>    
   <section>
-    <div class="container">
+    <div class="container-fluid">
       <br>
       <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
@@ -133,66 +130,100 @@
   </section>
   <section>
     <h1 class="feat" style="margin-top: 30px;">FEATURED</h1>
-    <div class="container sales">
-      <div class="row">
-        <div class="col-md-2 box">
-          <div class="img"><img src="" alt=""></div>
-          <h2 class="h2">Lorem ipsum</h2>
-          <p class="h">lorem ipsum</p><span>
+    <div class="container-fluid sales">
+      <div class="row featrow">
+        <div class="col-md-3 col-sm-3 box">
+          <div><img  class="img" src="./img/Uplinx Energy.jpg" alt="" ></div>
+          <h3 class="h">260W Yingli Mono Solar Panel</h3>
+          <p class="h">High Quality and Efficient Solar Power PanelOverviewPerformance:High output and efficiency even unde..</p><span><b>N75,000.00</b> <del> N78,000.00</del>
+            Ex Tax: N75,000.00</span>
             <div class="button-group">
-              <button type="button" onclick="cart.add('88', '1');"><i class="fa fa-shopping-cart"></i> <span class="hidden-xs hidden-sm hidden-md">Add to Cart</span></button>
-              <button type="button" data-toggle="tooltip" title="Add to Wish List" onclick="wishlist.add('88');"><i class="fa fa-heart"></i></button>
-              <button type="button" data-toggle="tooltip" title="Compare this Product" onclick="compare.add('88');"><i class="fa fa-exchange"></i></button>
+              <button class="add-to-cartt" type="button" onclick="cart.add('88', '1');"><a href="#">Add to Cart</a></button>
+              <button class="add-to-cartt" type="button" data-toggle="tooltip" title="Add to Wish List" onclick="wishlist.add('88');"><a href="#">wishlist</a></button>
+            </div>
+        </div>
+        <div class="col-md-3 box">
+          <div><img  class="img" src="./img/Uplinx Energy.jpg" alt="" ></div>
+          <h3 class="h">Mpower 200AH Deep cycle Battery</h3>
+          <p class="h">Power is stored in the battery bank. A battery is designed to store DC power and that is what the in..</p><span><b>N113,000.00</b> <del>N120,000.00</del>
+            Ex Tax: N113,000.00</span>
+           <div class="button-group">
+              <button class="add-to-cartt" type="button" onclick="cart.add('88', '1');"><a href="#">Add to Cart</a></button>
+              <button class="add-to-cartt" type="button" data-toggle="tooltip" title="Add to Wish List" onclick="wishlist.add('88');"><a href="#">wishlist</a></button>
+            </div>
+        </div>
+        <div class="col-md-3 box">
+          <div><img  class="img" src="./img/Uplinx Energy.jpg" alt="" ></div>
+          <h3 class="h">Mpower 1.2kva Inverter</h3>
+          <p class="h">The Mpower 1.2KVA/12V HF Inverter is a smart solution for uninterrupted power supply which ensures ..</p><span><b>N85,000.00</b> <del>N90,000.00</del>
+            Ex Tax: N85,000.00</span>
+           <div class="button-group">
+              <button class="add-to-cartt" type="button" onclick="cart.add('88', '1');"><a href="#">Add to Cart</a></button>
+              <button class="add-to-cartt" type="button" data-toggle="tooltip" title="Add to Wish List" onclick="wishlist.add('88');"><a href="#">wishlist</a></button>
+            </div>
+        </div>
+        <div class="col-md-3 box">
+          <div><img  class="img" src="./img/Uplinx Energy.jpg" alt="" ></div>
+          <h3 class="h">PPS 5W LED Bulb</h3>
+          <p class="h">PPS LED bulb adopt high light efficiency, ceramic as heat sink and 360 degree beaming angle. 5W LED ..</p><span>N450.00
+            Ex Tax: N450.00</span>
+           <div class="button-group">
+              <button class="add-to-cartt" type="button" onclick="cart.add('88', '1');"><a href="#">Add to Cart</a></button>
+              <button class="add-to-cartt" type="button" data-toggle="tooltip" title="Add to Wish List" onclick="wishlist.add('88');"><a href="#">wishlist</a></button>
+            </div>
+        </div>
+        <!--div class="col-md-2 box">
+          <div><img  class="img" src="./img/Uplinx Energy.jpg" alt="" ></div>
+          <h3 class="h">Lorem ipsum</h3>
+          <p class="h">lorem ipsum</p>
+           <div class="button-group">
+              <button class="add-to-cartt" type="button" onclick="cart.add('88', '1');"><a href="#">Add to Cart</a></button>
+              <button class="add-to-cartt" type="button" data-toggle="tooltip" title="Add to Wish List" onclick="wishlist.add('88');"><a href="#">wishlist</a></button>
+            </div>
+        </div-->
+      </div>  
+      <!--<div class="row">
+        <div class="col-md-2 box">
+          <h3 class="h">Lorem ipsum</h3>
+          <p class="h">lorem ipsum</p>
+           <div class="button-group">
+              <button class="add-to-cartt" type="button" onclick="cart.add('88', '1');"><a href="#">Add to Cart</a></button>
+              <button class="add-to-cartt" type="button" data-toggle="tooltip" title="Add to Wish List" onclick="wishlist.add('88');"><a href="#">wishlist</a></button>
             </div>
         </div>
         <div class="col-md-2 box">
-          <h2 class="h">Lorem ipsum</h2>
+          <h3 class="h">Lorem ipsum</h3>
           <p class="h">lorem ipsum</p>
-          <button class="add-to-cart"><a href="#">Add to cart</a></button>
+           <div class="button-group">
+              <button class="add-to-cartt" type="button" onclick="cart.add('88', '1');"><a href="#">Add to Cart</a></button>
+              <button class="add-to-cartt" type="button" data-toggle="tooltip" title="Add to Wish List" onclick="wishlist.add('88');"><a href="#">wishlist</a></button>
+            </div>
         </div>
         <div class="col-md-2 box">
-          <h2 class="h">Lorem ipsum</h2>
+          <h3 class="h">Lorem ipsum</h3>
           <p class="h">lorem ipsum</p>
-          <button class="add-to-cart"><a href="#">Add to cart</a></button>
+           <div class="button-group">
+              <button class="add-to-cartt" type="button" onclick="cart.add('88', '1');"><a href="#">Add to Cart</a></button>
+              <button class="add-to-cartt" type="button" data-toggle="tooltip" title="Add to Wish List" onclick="wishlist.add('88');"><a href="#">wishlist</a></button>
+            </div>
         </div>
         <div class="col-md-2 box">
-          <h2 class="h">Lorem ipsum</h2>
+          <h3 class="h">Lorem ipsum</h3>
           <p class="h">lorem ipsum</p>
-          <button class="add-to-cart"><a href="#">Add to cart</a></button>
+           <div class="button-group">
+              <button class="add-to-cartt" type="button" onclick="cart.add('88', '1');"><a href="#">Add to Cart</a></button>
+              <button class="add-to-cartt" type="button" data-toggle="tooltip" title="Add to Wish List" onclick="wishlist.add('88');"><a href="#">wishlist</a></button>
+            </div>
         </div>
         <div class="col-md-2 box">
-          <h2 class="h">Lorem ipsum</h2>
+          <h3 class="h">Lorem ipsum</h3>
           <p class="h">lorem ipsum</p>
-          <button class="add-to-cart"><a href="#">Add to cart</a></button>
+           <div class="button-group">
+              <button class="add-to-cartt" type="button" onclick="cart.add('88', '1');"><a href="#">Add to Cart</a></button>
+              <button class="add-to-cartt" type="button" data-toggle="tooltip" title="Add to Wish List" onclick="wishlist.add('88');"><a href="#">wishlist</a></button>
+            </div>
         </div>
-      </div>  
-      <div class="row">
-        <div class="col-md-2 box">
-          <h2 class="h">Lorem ipsum</h2>
-          <p class="h">lorem ipsum</p>
-          <button class="add-to-cart"><a href="#">Add to cart</a></button>
-        </div>
-        <div class="col-md-2 box">
-          <h2 class="h">Lorem ipsum</h2>
-          <p class="h">lorem ipsum</p>
-          <button class="add-to-cart"><a href="#">Add to cart</a></button>
-        </div>
-        <div class="col-md-2 box">
-          <h2 class="h">Lorem ipsum</h2>
-          <p class="h">lorem ipsum</p>
-          <button class="add-to-cart"><a href="#">Add to cart</a></button>
-        </div>
-        <div class="col-md-2 box">
-          <h2 class="h">Lorem ipsum</h2>
-          <p class="h">lorem ipsum</p>
-          <button class="add-to-cart"><a href="#">Add to cart</a></button>
-        </div>
-        <div class="col-md-2 box">
-          <h2 class="h">Lorem ipsum</h2>
-          <p class="h">lorem ipsum</p>
-          <button class="add-to-cart"><a href="#">Add to cart</a></button>
-        </div>
-      </div>
+      </div>-->
       
     </div>
   </section>
