--- a/login.html
+++ b/login.html
@@ -21,8 +21,7 @@
             </label>
         </div>
         <div class="container" style="background-color:#f1f1f1">
-            <a type="button" class="cancelbtn" href="./index.html">cancel</a>
-            <span class="psw">User <a href="./signup.html">Sign-up</a></span>
+            <button  type="button" onclick="" class="cancelbtn"><a href="./uplinktech.html">Cancel</a></button>
             <span class="psw">Forgot <a href="#">password?</a></span>
         </div>
     </form>
